--- a/src/main/java/UI/MainUI.form
+++ b/src/main/java/UI/MainUI.form
@@ -115,6 +115,7 @@
                       <Component id="jButton5" alignment="0" min="-2" pref="200" max="-2" attributes="0"/>
                       <Component id="jButton3" alignment="0" min="-2" pref="200" max="-2" attributes="0"/>
                       <Component id="jButton2" alignment="0" min="-2" pref="200" max="-2" attributes="0"/>
+                      <Component id="jButton9" alignment="0" min="-2" pref="200" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jScrollPane1" pref="496" max="32767" attributes="0"/>
@@ -137,7 +138,9 @@
                           <Component id="jButton4" min="-2" pref="50" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="jButton5" min="-2" pref="50" max="-2" attributes="0"/>
-                          <EmptySpace pref="99" max="32767" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="jButton9" min="-2" pref="50" max="-2" attributes="0"/>
+                          <EmptySpace pref="43" max="32767" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="103" alignment="1" groupAlignment="0" attributes="0">
                                   <Component id="jButton7" alignment="0" min="-2" pref="35" max="-2" attributes="0"/>
@@ -242,6 +245,14 @@
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton8ActionPerformed"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JButton" name="jButton9">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Generate Log"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton9ActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
